@@ -12,6 +12,7 @@ What's new in thtk master
 - Game version now must be specified, just as with other tools.
 - Support for TH18, TH185, TH19 (full) has been added.
 - Support th143/bestshot.anm
+- The -u flag can now be used to extract anm files with duplicate filenames.
 
 #### thanm.old
 - Will be removed in the next release.
